--- a/public/index.html
+++ b/public/index.html
@@ -28,13 +28,16 @@
 			<div class="player-list"></div>
 
 			<form class="answer-form" action=""></form>
-				<input type="text" value="saying something..." name="message" id="message" placeholder="answer" />
+				<input type="text" value="" name="message" id="message" placeholder="answer" />
 			</form>
 			<div class="submit-answer">
 				send answer
 			</div>
 			<div class="start-game">
 				START GAME
+			</div>
+			<div class="reset-game">
+				RESET GAME
 			</div>
 			<div class="list-info"></div>
 
