--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
 	<div class="app centered-box">
 
 		<div class="trucker-status header">
+			<img class="logo-img" src="gui/img/truckerfun_logo.png" alt=""/>
 			<strong>Master of the list</strong>
 			<div class="list-name"></div>
 		</div>
@@ -22,14 +23,14 @@
 
 		<div class="join-game-screen">
 			<form class="form" action="">
-				<input type="text" value="kanske" name="nickname" id="nickname" placeholder="nickname" />
+				<input class="rounded" type="text" value="" name="nickname" id="nickname" placeholder="nickname" />
 			</form>
 			<div class="submit-name">
 				<button>join</button>
 			</div>
 		</div>
 
-		<div class="game-screen AAAAinactive">
+		<div class="game-screen inactive">
 			<!--<div class="nick-name"></div>-->
 
 			<div class="player-list"></div>
@@ -44,7 +45,7 @@
 
 			<div class="answer-form">
 				<form class="answer-form" action=""></form>
-				<input type="text" value="" name="message" id="message" placeholder="answer" />
+				<input class="rounded" type="text" value="" name="message" id="message" placeholder="your answer" />
 				</form>
 				<div class="submit-answer">
 					<button>send answer</button>
