--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 		<div class="trucker-status header">
 			<img class="logo-img" src="gui/img/truckerfun_logo.png" alt=""/>
 			<strong>Master of the list</strong>
-			<div class="list-name"></div>
+			<div class="list-name inactive"></div>
 		</div>
 
 		<div class="intro-screen"></div>
