--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,10 @@
 <head>
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-	<script src="http://localhost:10151/socket.io/socket.io.js"></script>
-	<script type="text/javascript" src="/gui/js/vendor/jquery-1.10.2.min.js"></script>
-	<!--<script src="/gui/js/socket_io.js"></script>-->
-	<script src="/gui/js/app.js"></script>
-	<link rel="stylesheet" type="text/css" href="/gui/css/app.css">
+	<script src="/socket.io/socket.io.js"></script>
+	<script type="text/javascript" src="http://isolabs.isotop.se/code/1_multiplayer/team5/isolab_1/public/gui/js/vendor/jquery-1.10.2.min.js"></script>
+	<script src="http://isolabs.isotop.se/code/1_multiplayer/team5/isolab_1/public/gui/js/app.js"></script>
+	<link rel="stylesheet" type="text/css" href="http://isolabs.isotop.se/code/1_multiplayer/team5/isolab_1/public/gui/css/app.css">
 </head>
 <body>
 
