--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 	<div class="app centered-box">
 
 		<div class="trucker-status header">
-			<img class="logo-img" src="gui/img/truckerfun_logo.png" alt=""/>
+			<img class="logo-img" src="http://isolabs.isotop.se/code/1_multiplayer/team5/isolab_1/public/gui/img/truckerfun_logo.png" alt=""/>
 			<strong>Master of the list</strong>
 			<div class="list-name inactive"></div>
 		</div>
