--- a/listadmin.html
+++ b/listadmin.html
@@ -1,6 +1,6 @@
 <script src="/socket.io/socket.io.js"></script>
 <script>
-  var socket = io.connect('http://localhost:10151');
+  var socket = io.connect('http://isolabs.isotop.se:10151');
 
 //  // Called when client is connected to server
 //  socket.on('connect', function () {
