--- a/public/index.html
+++ b/public/index.html
@@ -52,10 +52,10 @@
 
 
 
-			<div class="start-game">
+			<div class="start-game inactive">
 				<button>START GAME</button>
 			</div>
-			<div class="reset-game">
+			<div class="reset-game inactive">
 				<button>RESET GAME</button>
 			</div>
 		</div>
